# journey

./: .gitignore  .gitmodules  :w  CMakeLists.txt  INDEX  README.md  calculus.txt  ctags.sh  esm.txt  glsl_coding_convention  guitar.txt  journey.txt  kitchen.txt  linear.txt  omni_shadowmapd  openmw.txt  openmw_mission  vim_key.md
.vim/: pj.vim  (+1 more)
algorithm/: CMakeLists.txt  Makefile  cmake_install.cmake
algorithm/bubble_sort/: bubble_sort.cpp
algorithm/count_sort/: count_sort.cpp
algorithm/heap/: heap.cpp
algorithm/heap_sort/: heap_sort.cpp
algorithm/insert_sort/: insert_sort.cpp
algorithm/max_subarray/: max_subarray.cpp
algorithm/merge_sort/: merge_sort.cpp
algorithm/nth_element/: nth_element.cpp
algorithm/quick_sort/: quick_sort.cpp
basic/: CMakeLists.txt  Makefile  cmake_install.cmake
basic/cast/: cast.cpp
basic/exception/: exception.cpp
basic/fstream/: fstream.cpp
basic/mask/: mask.cpp
basic/printf/: printf.cpp
basic/stream/: stream.cpp
basic/template_overload/: template_overload.cpp
basic/traits/: traits.cpp
c++/: CMakeLists.txt  acronym  cpp_coding_convension  gcc_msvc_difference  journey  make_result  mine  note  pj.sh  question  stl_algo_category  structure
c++/.dedowsdi/: proj.json
c++/.vim/: init.vim  pj.vim  project.json
c++/algorithm/: CMakeLists.txt
c++/basic/: CMakeLists.txt
c++/boost/: CMakeLists.txt  journey
c++/cmake/: util.cmake
c++/data/: config_options
c++/idiom/: CMakeLists.txt
c++/pattern/: CMakeLists.txt
c++/quiz/: CMakeLists.txt
c++/script/: cmake.sh
c++/task/: CMakeLists.txt
c++/tmp/: CMakeLists.txt
c++/trick/: CMakeLists.txt
c++/util/: threadguard.h
common/: BaseManager.cpp  BaseManager.h  CMakeLists.txt  Makefile  bitmap_text.h  cmake_install.cmake  common.c  common.cpp  common.h  freetype_text.h  glEnumString.cpp  glEnumString.h  glm.cpp  glm.h  light.h  program.cpp  program.h  sphere.cpp  sphere.h  stringutil.cpp  texutil.h
common/include/: auxiliary.h  bezier.h  bitmap_text.h  blendermanipulator.h  common.h  freetype_text.h  glEnumString.h  glm.h  gridfloor.h  heap.h  light.h  menuelement.h  nurb.h  quad.h  spline.h  stringutil.h  zmath.h
common/src/: auxiliary.cpp  bitmap_text.cpp  blendermanipulator.cpp  common.cpp  glEnumString.cpp  gridfloor.cpp  light.cpp  menu.cpp  program.cpp  quad.cpp  submenu.cpp  texutil.cpp  zmath.cpp
demo/: CMakeLists.txt  aaindex.cpp  aargb.c  aargb.cpp  accanti.c  accanti.cpp  accpersp.cpp  alpha.cpp  alpha3D.c  alpha3D.cpp  bezcurve.cpp  bezmesh.cpp  bezsurf.cpp  blank.cpp  blendeqn.c  blendeqn.cpp  checker.cpp  clip.c  colormat.c  colormat.cpp  colormatrix.c  colormatrix.cpp  colortable.cpp  combiner.c  combiner.cpp  convolution.c  convolution.cpp  cube.cpp  cubemap.cpp  dof.cpp  double.cpp  drawf.cpp  drawf2.cpp  edgeFlag.cpp  feedback.c  feedback.cpp  fog.cpp  fogcoord.cpp  fogindex.cpp  font.cpp  (+91 more)
demo/animPath/: animPath.cpp
demo/animSwitch/: animSwitch.cpp
demo/axis/: axis.cpp
demo/backgroundImage/: backgroundImage.cpp
demo/bezier/: bezier.cpp
demo/bfsVisitor/: bfsVisitor.cpp
demo/billboard/: billboard.cpp
demo/billboardNode/: billboardNode.cpp
demo/billboardTree/: billboardTree.cpp
demo/boundingbox/: boundingbox.cpp
demo/clock/: clock.cpp
demo/compass/: compass.cpp
demo/compositeViewer/: compositeViewer.cpp
demo/cube/: cube.cpp
demo/cube3/: cube.vs.glsl  cube3.cpp
demo/cursor/: cursor.cpp
demo/door/: door.cpp
demo/driveCessna/: driveCessna.cpp
demo/dynamicGeometry/: dynamicGeometry.cpp
demo/euler/: euler.cpp
demo/extrude/: extrude.cpp
demo/fadein/: fadein.cpp
demo/fixVerticalUp/: fixVerticalUp.cpp
demo/fog/: fog.cpp
demo/followModel/: followModel.cpp
demo/fourView/: fourView.cpp
demo/gridfloor/: gridfloor.cpp
demo/helloworld/: helloworld.cpp
demo/highlight/: highlight.cpp
demo/imageSequence/: imageSequence.cpp
demo/light/: light.cpp
demo/log/: log.cpp
demo/mirrorScene/: mirrorScene.cpp
demo/movie/: movie.cpp
demo/nurb/: nurb.cpp
demo/occludeCull/: occludeCull.cpp
demo/octahedron/: octahedron.cpp
demo/ogrehead/: ogrehead.cpp
demo/osgdb_tri/: osgdb_tri.cpp
demo/particleRotarySprinkler/: particleRotarySprinkler.cpp
demo/pick/: pick.cpp
demo/plane/: plane.cpp
demo/positionAttitudeTransform/: positionAttitudeTransform.cpp
demo/quad/: quad.cpp
demo/ribbon/: ribbon.cpp
demo/rtt/: rtt.cpp
demo/scrollingText/: scrollingText.cpp
demo/selectFace/: selectFace.cpp
demo/selectPoint/: selectPoint.cpp
demo/serializer/: serializer.cpp
demo/shadow/: shadow.cpp
demo/shareTexture/: shareTexture.cpp
demo/singleCube/: singleCube.cpp
demo/singlePoint/: singlePoint.cpp
demo/singleTriangle/: singleTriangle.cpp
demo/stateAttrib/: stateAttrib.cpp
demo/terrain/: terrain.cpp
demo/tessellate/: tessellate.cpp
demo/text/: text.cpp
demo/text3d/: text3d.cpp
demo/texture/: texture.cpp
demo/threadHelloWorld/: threadHelloWorld.cpp
demo/timerEvent/: timerEvent.cpp
demo/trackerManipulator/: trackerManipulator.cpp
demo/transform/: transform.cpp
demo/translucent/: translucent.cpp
demo/upsidedown/: upsidedown.cpp
demo/windowMode/: windowMode.cpp
effect/: CMakeLists.txt  Makefile  bitmap_text.cpp  blinnphong.cpp  bloom.cpp  circular.c  circular.cpp  cmake_install.cmake  directional_shadowmap.cpp  freetype_text.cpp  gaussian_blur.cpp  gaussianblur.cpp  hdr.cpp  instance.cpp  omni_shadowmap.cpp  rim.cpp
gl2/: CMakeLists.txt  INDEX  cmake.sh  ctags.sh  glc  make_result  pj.sh
gl2/.dedowsdi/: .dedowsdi  cmake.sh  proj.json
gl2/.vim/: ctags.sh  init.vim  pj.vim  project.json
gl2/common/: CMakeLists.txt
gl4/: .gutctags  CMakeLists.txt  cmake.sh  compile_commands.json  ctags.sh  journey  make_result  pj.sh  test_exe.sh
macro/: CMakeLists.txt
osg/: .exrc  CMakeLists.txt  README.md  compile_commands.json  ctags.sh  index  journey  osg.uxf  osg_class_abbre.sh  pj.sh  shadow.uxf
osgt/: .clang-format  .exrc  CMakeLists.txt  README.md  cmake.bat  license  proj.bat
pattern/: CMakeLists.txt  Makefile  cmake_install.cmake
practice/: CMakeLists.txt
(+1866 files in other folders)
