set (DEMOES
    borderline
    helloworld
    log
    shape
    quad
    octahedron
    tessellate
	faceCollector
    transform
    switch
    lod
    proxy
    pagedlod
    animSwitch
    infoVisitor
    polygonMode
    stateAttrib
    fog
    light
    texture
	translucent
    cartoonCow
	cubicBezier
    hudCamera
    loop
    compositeViewer
    multiSample
    rtt
    updateCallback
    dynamicGeometry
    animPath
    fadein
    imageSequence
    driveCessna
    timerEvent
    pick
    cube
    positionAttitudeTransform
    lightAttribute
    upsidedown
    windowMode
    cube3
    extrude
    revolution
    highlight
    animChannel
    serializer
    billboard
    billboardTree
    text
    text3d
    particleFountain
    particleRotarySprinkler
    shadow
    outline
    threadHelloWorld
    threadSwitch
    occludeCull
    shareTexture
    terrain
    clone
    boundingbox
    car
    mirrorScene
    bfsVisitor
    backgroundImage
    billboardNode
    compass
    nurb
    clock
    ribbon
    selectFace
    selectPoint
    drawInstanced
    multiScreen
    fourView
    followModel
    trackerManipulator
    door
    movie
    scrollingText
    gimbal
    euler
    gridfloor
    axis
    cursor
    cameraManipulator2D
    fixVerticalUp
    )

foreach(DEMO ${DEMOES})
    message("add ${DEMO}")
    add_executable(${DEMO} ${DEMO}/${DEMO}.cpp)
    set_target_properties(${DEMO} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
    target_link_libraries(${DEMO}
        ${OPENTHREADS_LIBRARY}
        ${OSG_LIBRARY}
        ${OSGDB_LIBRARY}
        ${OSGUTIL_LIBRARY}
        ${OSGVIEWER_LIBRARY}
        ${OSGGA_LIBRARY}
        ${OSGANIMATION_LIBRARY}
        ${OSGTEXT_LIBRARY}
        ${OSGPARTICLE_LIBRARY}
        ${OSGSHADOW_LIBRARY}
        ${OSGFX_LIBRARY}
        ${OPENGL_gl_LIBRARY}
        ${OPENGL_glu_LIBRARY}
        ${OSGWIDGET_LIBRARY}
        common
        )
endforeach()

add_library(osgdb_tri SHARED osgdb_tri/osgdb_tri.cpp)
