set (DEMOES
    aaindex
    aargb
    accanti
    accpersp
    alpha3D
    alpha
    bezcurve
    bezmesh
    bezsurf
    blendeqn
    checker
    texcompress
    texenv
    texwrap
    clip
    colormat
    colormatrix
    colortable
    combiner
    convolution
    cube
    cubemap
    dof
    double
    drawf
    drawf2
    feedback
    fog
    fogcoord
    fogindex
    font
    hello
    histogram
    image
    light
    lines
    list
    material
    minmax
    mipmap
    model
    movelight
    multisamp
    multitex
    mvarray
    pickdepth
    picksquare
    planet
    pointp
    polyoff
    polys
    quadric
    robot
    scene
    select
    shadowmap
    smooth
    stencil
    stroke
    surface
    surfpoints
    teapots
    tess
    tesswind
    texbind
    texgen
    texprox
    texsub
    texture3d
    texturesurf
    torus
    trim
    unproject
    varray
    wrap
    edgeFlag
    vbo
    icosahedron
    twosidedlighting
    pboimage
    sprite
    texmat
    stencilcap
    blank
    fragtest
    occlusion
    shader
    gamma
    normalmap
    rtt
    )

foreach(DEMO ${DEMOES})
    message("add demo ${DEMO}")
    add_executable(${DEMO} ${CMAKE_CURRENT_SOURCE_DIR}/${DEMO}.cpp)
    set_target_properties(${DEMO} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
    target_link_libraries(${DEMO}
        ${OPENGL_gl_LIBRARY}
        ${OPENGL_glu_LIBRARY}
        ${GLUT_LIBRARIES}
        m
        common
        )
endforeach()

